added the first web

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/web.css">
 </head>
 <body>
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi voluptas earum ipsa. Eos doloremque sint reiciendis similique fugiat praesentium qui odio dicta iste impedit nobis tenetur magnam, nostrum soluta.</p>
+    </div>
     
 </body>
 </html>
