--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <h3>my first website</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi voluptas earum ipsa. Eos doloremque sint reiciendis similique fugiat praesentium qui odio dicta iste impedit nobis tenetur magnam, nostrum soluta.</p>
     </div>
+    <div>
+        <h3>my secend
+         website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi voluptas earum ipsa. Eos doloremque sint reiciendis similique fugiat praesentium qui odio dicta iste impedit nobis tenetur magnam, nostrum soluta.</p>
+    </div>
+    <div>
+        <h3>my third  website</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi voluptas earum ipsa. Eos doloremque sint reiciendis similique fugiat praesentium qui odio dicta iste impedit nobis tenetur magnam, nostrum soluta.</p>
+    </div>
     
 </body>
 </html>
