add a list to push code

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <h3>my third  website</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis excepturi voluptas earum ipsa. Eos doloremque sint reiciendis similique fugiat praesentium qui odio dicta iste impedit nobis tenetur magnam, nostrum soluta.</p>
     </div>
+    <div>
+        <h3>how to incrementel cod</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful message</li>
+            <li>git push</li>
+        </ul>
+    </div>
     
 </body>
 </html>
