--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
             <li>git add .</li>
             <li>git commit -m"add a meaningful message</li>
             <li>git push</li>
+            <li>koi</li>
         </ul>
     </div>
-    
+    <div>
+        <h3> dui nodi </h3>
+    <h2>jkkfjkfk</h2>
+    <img src="imeges/IMG_20250529_182720_830.jpg" width="250" height="200" alt="">
+    </div>
 </body>
 </html>
